# python-celery-example

./: .env.development  .gitignore  README.md  docker-compose.yml
app/: celeryconfig.py  pyproject.toml  tasks.py
cdk/: cdk.json  package-lock.json  package.json
cdk/lib/: python-celery-example-stack.ts
cdk/test/: python-celery-example.ts
docker/cdk/: Dockerfile
docker/celery/: Dockerfile
