[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
celery = {extras = ["sqs"], version = "^5.2.3"}
pytest = "^6.2.5"
requests = "^2.27.0"
pycurl = "^7.44.1"
boto3 = "^1.20.28"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
flake8 = "^4.0.1"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
